--- a/natives-publish/build.gradle
+++ b/natives-publish/build.gradle
@@ -6,8 +6,10 @@ plugins {
 version = '1.3.15'
 ext.moduleName = 'lavaplayer-natives'
 
-task sourceJar(type: Jar) {
-  from sourceSets.main.allJava
+tasks {
+  java {
+    withSourcesJar()
+  }
 }
 
 publishing {
@@ -17,9 +19,9 @@ publishing {
       artifactId moduleName
       from components.java
 
-      artifact sourceJar {
-        classifier 'sources'
-      }
+//      artifact sourceJar {
+//        classifier 'sources'
+//      }
     }
   }
 }
